--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -215,17 +215,18 @@
                     tools:layout_editor_absoluteX="16dp">
 
                     <TextView
+                        android:id="@+id/textViewS"
                         android:layout_width="42dp"
                         android:layout_height="42dp"
                         android:layout_marginEnd="6dp"
                         android:background="@drawable/circular_background"
                         android:gravity="center"
                         android:text="S"
-
                         android:textColor="@color/black"
                         android:textSize="16dp" />
 
                     <TextView
+                        android:id="@+id/textViewM"
                         android:layout_width="42dp"
                         android:layout_height="42dp"
                         android:layout_margin="6dp"
@@ -236,29 +237,28 @@
                         android:textSize="16dp" />
 
                     <TextView
+                        android:id="@+id/textViewL"
                         android:layout_width="42dp"
                         android:layout_height="42dp"
                         android:layout_margin="6dp"
-                        android:background="@drawable/circular_background_selected"
-                        android:backgroundTint="@color/colorPrimary"
+                        android:background="@drawable/circular_background"
                         android:gravity="center"
                         android:text="L"
-                        android:textColor="@color/white"
+                        android:textColor="@color/black"
                         android:textSize="16dp" />
 
                     <TextView
+                        android:id="@+id/textViewXL"
                         android:layout_width="42dp"
                         android:layout_height="42dp"
                         android:layout_margin="6dp"
-
                         android:background="@drawable/circular_background"
                         android:gravity="center"
                         android:text="XL"
                         android:textColor="@color/black"
                         android:textSize="16dp" />
-
-
                 </androidx.appcompat.widget.LinearLayoutCompat>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
 
@@ -273,20 +273,21 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <ImageView
+                android:id="@+id/imageView_like_product"
                 android:layout_width="52dp"
                 android:layout_height="52dp"
                 android:background="@drawable/tab_background"
                 android:backgroundTint="@color/white"
                 android:padding="10dp"
                 android:scaleType="centerInside"
-                android:src="@drawable/ic_favorite"
-                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_favourite_selectd"
+                android:tint="#FA76A3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/textView10"
-                app:layout_constraintHorizontal_bias="0.301"
+                app:layout_constraintHorizontal_bias="0.34"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.687" />
+                app:layout_constraintVertical_bias="0.384" />
 
             <TextView
                 android:id="@+id/textView10"
