--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -12,7 +12,7 @@
 
     <!-- First TextView -->
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewPro"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:scaleType="centerInside"
